feat: break code for modules and set dependencies

--- a/src/index.html
+++ b/src/index.html
@@ -7,28 +7,5 @@
     <link rel="shortcut icon" href="../src/assets/images/keyboard.ico" />
     <title>Virtual Keyboard</title>
   </head>
-  <body>
-    <div class="container">
-      <h1 class="title">Keyboard</h1>
-      <textarea name="textarea" id="textarea" cols="30" rows="10"></textarea>
-      <!-- <div class="keyboard">
-        <div class="keyboard__keys">
-          <button class="keyboard__key">a</button>
-          <button class="keyboard__key">
-            <img
-              src="../src/assets/icons/caret-down-solid.svg"
-              alt="caret"
-              class="arrows"
-            />
-          </button>
-          <button
-            class="keyboard__key keyboard__key--wide keyboard__key--activatable"
-          >
-            CapsLk
-          </button>
-          <button class="keyboard__key keyboard__key--extra-wide">|___|</button>
-        </div>
-      </div> -->
-    </div>
-  </body>
+  <body></body>
 </html>
